# stuff-search

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Readme.md  docker-compose.yml
assets/css/: styles.min.css
assets/js/: script.min.js
src/: database.rs  import.rs  item_template.md  main.rs
templates/: container_tree.html  containers.html  index.html  modal_upload.html  query_results.html  search.html
templates/containers/: container_edit.html  container_single.html  containers.html  modal_delete.html  modal_upload.html
templates/items/: delete_confirm_snippet.html  modal_display.html  modal_edit.html
