[package]
name = "stuff-search"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-openai = "0.26.0"
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
image = "0.25.5"
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tera = "1.20.0"
tokio = { version = "1.42.0", features = ["full"] }
zip = "2.2.2"
