[package]
name = "stuff-search"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-openai = "0.26.0"
axum = { version = "0.8.1", features = ["multipart"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
fastembed = "4.3.0"
image = "0.25.5"
lazy_static = "1.5.0"
minijinja = { version = "2.5.0", features = ["loader"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlite-vec = "0.1.6"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
zerocopy = "0.8.14"
zip = "2.2.2"
